Added a dropdown button for profile managment.

--- a/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="~/MovieGalleryApp.Web.styles.css" asp-append-version="true" />*@
 
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dropDownButton.css" asp-append-version="true" />
 </head>
 
 <body>
@@ -32,6 +34,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/dropDownButton.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
