--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="navbar">
     <div class="navbar-container">
         <div class="logo-container">
-            <h1 class="logo">flakes</h1>
+            <a class="logo" asp-area="" asp-controller="Home" asp-action="Index">Movie Gallery</a>
         </div>
         <div class="menu-container">
             <ul class="menu-list">
