--- a/MovieGalleryApp.Web/Views/Home/Index.cshtml
+++ b/MovieGalleryApp.Web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using MovieGalleryApp.Core.Models.Movie
+@model ICollection<MovieMainPageVM>
+@{
     ViewData["Title"] = "Movie Gallery";
 }
 
@@ -14,74 +16,78 @@
         <button class="featured-button">WATCH</button>
     </div>
     <div class="movie-list-container">
-        <h1 class="movie-list-title">NEW RELEASES</h1>
+        <h1 class="movie-list-title">Action Movies</h1>
         <div class="movie-list-wrapper">
             <div class="movie-list">
-                <div class="movie-list-item">
-                    <img class="movie-list-item-img" src="~/img/1.jpeg" alt="">
-                    <span class="movie-list-item-title">Her</span>
-                    <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
-                    </p>
-                    <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                @foreach (var movie in Model)
+                {
+                    <div class="movie-list-item">
+                        <img class="movie-list-item-img" src="@movie.ImgUrl" alt="">
+                        <span class="movie-list-item-title">@movie.Title</span>
+                        <p class="movie-list-item-desc">
+                            @movie.Description
+                        </p>
+                        <button class="movie-list-item-button">Details</button>
+                    </div>
+                }
+
+                @*
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/2.jpeg" alt="">
                     <span class="movie-list-item-title">Star Wars</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                    </div>
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/3.jpg" alt="">
                     <span class="movie-list-item-title">Storm</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                    </div>
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/4.jpg" alt="">
                     <span class="movie-list-item-title">1917</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                    </div>
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/5.jpg" alt="">
                     <span class="movie-list-item-title">Avengers</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                    </div>
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/6.jpg" alt="">
                     <span class="movie-list-item-title">Her</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
-                <div class="movie-list-item">
+                    </div>
+                    <div class="movie-list-item">
                     <img class="movie-list-item-img" src="~/img/7.jpg" alt="">
                     <span class="movie-list-item-title">Her</span>
                     <p class="movie-list-item-desc">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-                        hic fugit similique accusantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At
+                    hic fugit similique accusantium.
                     </p>
                     <button class="movie-list-item-button">Watch</button>
-                </div>
+                    </div>*@
             </div>
-            <i class="fas fa-chevron-right arrow"></i>
+            @*<i class="fas fa-chevron-right arrow"></i>*@
         </div>
     </div>
     <div class="movie-list-container">
