--- a/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/dropDownButton.css" asp-append-version="true" />
 </head>
 
