--- a/MovieGalleryApp.Web/Views/Movie/Details.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Details.cshtml
@@ -14,6 +14,7 @@
                 <div class="details-content-body">
                     <div class="details-black-label">
                         <p class="details-description">@Model.Description</p>
+                        <p class="details-genres">Genres: @Model.Genres</p>
                         <span class="details-title"><b>Released: @Model.ReleaseDate.ToShortDateString()</b></span>
                         <div class="details-prix">
                             <span class="details-span"><b class="details-budget">Budget: @Model.Budget</b></span>
