Users with Movie administrator role can now edit the movies.

--- a/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/details.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/dropDownButton.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/editMovie.css" asp-append-version="true" />
 </head>
 
 <body>
