--- a/MovieGalleryApp.Web/Views/_ViewImports.cshtml
+++ b/MovieGalleryApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MovieGalleryApp.Web
 @using MovieGalleryApp.Web.Models
+@using MovieGalleryApp.Core.Constants
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
