Added the functionality of creating movies.

--- a/MovieGalleryApp.Web/Views/Movie/Create.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MovieGalleryApp.Core.Models.Movie
-@model MovieEditVM
+@model MovieCreateVM
 @{
 }
 
@@ -7,9 +7,8 @@
     <div class="col-4">
         <div class="edit-form">
             <div class="edit-title">Welcome, Movie Administrator!</div>
-            <div class="edit-subtitle">Here you can edit this movie!</div>
+            <div class="edit-subtitle">Here you can add a new movie!</div>
             <form id="edit" method="post">
-                <input type="hidden" name="Id" value="@Model.Id" />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="edit-input-container ic1">
                     <label asp-for="Title" class="form-label edit-position"></label>
@@ -40,6 +39,11 @@
                     <label asp-for="Budget" class="form-label edit-position"></label>
                     <input asp-for="Budget" class="form-control edit-width" aria-required="true" />
                     <span asp-validation-for="Budget" class="text-danger"></span>
+                </div>
+                 <div class="input-container ic2">
+                    <label asp-for="Genres" class="form-label edit-position"></label>
+                    <input asp-for="Genres" class="form-control edit-width" aria-required="true" />
+                    <span asp-validation-for="Genres" class="text-danger"></span>
                 </div>
                 <button id="login-submit" type="submit" class="edit-submit">Submit</button>
             </form>
