Movie Administrator can add actors to a movie.

--- a/MovieGalleryApp.Web/Views/Movie/Details.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Details.cshtml
@@ -19,10 +19,13 @@
                         <div class="details-prix">
                             <span class="details-span"><b class="details-budget">Budget: @Model.Budget</b></span>
                             <span class="details-crt">Rating: @Model.Rating / 10</span>
-                            @if (User.IsInRole(UserConstants.Roles.MovieAdministrator))
-                            {
-                                <a class="details-featured-button" asp-controller="Movie" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
-                            }
+                            <div class="details-buttons-div">
+                                <a class="cast-featured-button" asp-controller="Actor" asp-action="Cast" asp-route-id="@Model.Id">Cast</a>
+                                @if (User.IsInRole(UserConstants.Roles.MovieAdministrator))
+                                {
+                                    <a class="details-featured-button" asp-controller="Movie" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
