--- a/MovieGalleryApp.Web/Views/Movie/Create.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Create.cshtml
@@ -45,6 +45,11 @@
                     <input asp-for="Genres" class="form-control edit-width" aria-required="true" />
                     <span asp-validation-for="Genres" class="text-danger"></span>
                 </div>
+                <div class="input-container ic2">
+                    <label asp-for="Countries" class="form-label edit-position"></label>
+                    <input asp-for="Countries" class="form-control edit-width" aria-required="true" />
+                    <span asp-validation-for="Countries" class="text-danger"></span>
+                </div>
                 <button id="login-submit" type="submit" class="edit-submit">Submit</button>
             </form>
         </div>
