Added navbar button that points to all movies section.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -5,11 +5,12 @@
         </div>
         <div class="menu-container">
             <ul class="menu-list">
-                <li class="menu-list-item active">Home</li>
-                <li class="menu-list-item">Movies</li>
-                <li class="menu-list-item">Series</li>
-                <li class="menu-list-item">Popular</li>
-                <li class="menu-list-item">Trends</li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Movie" asp-action="Movies">Movies</a>
+                </li>
             </ul>
         </div>
         <partial name="_LoginPartial" />
