Added navbar button that points to all genre section.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -11,6 +11,9 @@
                 <li class="menu-list-item active">
                     <a class="main-page-navbar-a" asp-controller="Movie" asp-action="Movies">Movies</a>
                 </li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Genre" asp-action="Genres">Genres</a>
+                </li>
             </ul>
         </div>
         <partial name="_LoginPartial" />
