Added all actors section.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -14,6 +14,9 @@
                 <li class="menu-list-item active">
                     <a class="main-page-navbar-a" asp-controller="Genre" asp-action="Genres">Genres</a>
                 </li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Actor" asp-action="All">Actors</a>
+                </li>
             </ul>
         </div>
         <partial name="_LoginPartial" />
