--- a/MovieGalleryApp.Web/wwwroot/css/style.css
+++ b/MovieGalleryApp.Web/wwwroot/css/style.css
@@ -432,6 +432,12 @@ body {
     margin: auto;
 }
 
+.actor-table-div {
+    width: 550px;
+    padding-top: 120px;
+    margin: auto;
+}
+
 .cast-img {
     width: 150px;
     height: 200px;
