Added navbar button that points to all countries section.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -15,7 +15,10 @@
                     <a class="main-page-navbar-a" asp-controller="Genre" asp-action="Genres">Genres</a>
                 </li>
                 <li class="menu-list-item active">
-                    <a class="main-page-navbar-a" asp-controller="Actor" asp-action="All">Actors</a>
+                    <a class="main-page-navbar-a" asp-controller="Actor" asp-action="Actors">Actors</a>
+                </li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Country" asp-action="Countries">Countries</a>
                 </li>
             </ul>
         </div>
