Added all countries section.

--- a/MovieGalleryApp.Web/wwwroot/css/style.css
+++ b/MovieGalleryApp.Web/wwwroot/css/style.css
@@ -438,6 +438,12 @@ body {
     margin: auto;
 }
 
+.country-table-div {
+    width: 600px;
+    padding-top: 120px;
+    margin: auto;
+}
+
 .cast-img {
     width: 150px;
     height: 200px;
