Added the functionality of adding genres.

--- a/MovieGalleryApp.Web/Views/Genre/Genres.cshtml
+++ b/MovieGalleryApp.Web/Views/Genre/Genres.cshtml
@@ -24,6 +24,6 @@
     </table>
     @if (User.IsInRole(UserConstants.Roles.MovieAdministrator))
     {
-        <a class="cast-featured-button cast-button" asp-controller="Genre" asp-action="Create">Add a genre</a>
+        <a class="cast-featured-button cast-button" asp-controller="Genre" asp-action="Add">Add a genre</a>
     }
 </div>
