Added navbar button that points to all countries section.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -20,6 +20,9 @@
                 <li class="menu-list-item active">
                     <a class="main-page-navbar-a" asp-controller="Country" asp-action="Countries">Countries</a>
                 </li>
+                <li class="menu-list-item active">
+                    <a class="main-page-navbar-a" asp-controller="Cinema" asp-action="All">Cinemas</a>
+                </li>
             </ul>
         </div>
         <partial name="_LoginPartial" />
