Added sidebar logic.

--- a/MovieGalleryApp.Web/Views/Movie/Movies.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Movies.cshtml
@@ -32,6 +32,6 @@
     </table>
     @if (User.IsInRole(UserConstants.Roles.MovieAdministrator))
     {
-        <a class="cast-featured-button cast-button" asp-controller="Movie" asp-action="Create">Add a movie</a>
+        <a class="cast-featured-button cast-button" asp-controller="Movie" asp-action="Add">Add a movie</a>
     }
 </div>
