Cinemas are now showing on movie details page.

--- a/MovieGalleryApp.Web/Views/Movie/Details.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Details.cshtml
@@ -16,6 +16,7 @@
                         <p class="details-description">@Model.Description</p>
                         <p class="details-genres">Genres: @Model.Genres</p>
                         <p class="details-genres">Countries: @Model.Countries</p>
+                        <p class="details-genres">Cinemas: @Model.Cinemas</p>
                         <span class="details-title"><b>Released: @Model.ReleaseDate.ToShortDateString()</b></span>
                         <div class="details-prix">
                             <span class="details-span"><b class="details-budget">Budget: @Model.Budget</b></span>
