Fixed url path names.

--- a/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
+++ b/MovieGalleryApp.Web/Views/Shared/_Navbar.cshtml
@@ -9,16 +9,16 @@
                     <a class="main-page-navbar-a" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="menu-list-item active">
-                    <a class="main-page-navbar-a" asp-controller="Movie" asp-action="Movies">Movies</a>
+                    <a class="main-page-navbar-a" asp-controller="Movie" asp-action="All">Movies</a>
                 </li>
                 <li class="menu-list-item active">
-                    <a class="main-page-navbar-a" asp-controller="Genre" asp-action="Genres">Genres</a>
+                    <a class="main-page-navbar-a" asp-controller="Genre" asp-action="All">Genres</a>
                 </li>
                 <li class="menu-list-item active">
-                    <a class="main-page-navbar-a" asp-controller="Actor" asp-action="Actors">Actors</a>
+                    <a class="main-page-navbar-a" asp-controller="Actor" asp-action="All">Actors</a>
                 </li>
                 <li class="menu-list-item active">
-                    <a class="main-page-navbar-a" asp-controller="Country" asp-action="Countries">Countries</a>
+                    <a class="main-page-navbar-a" asp-controller="Country" asp-action="All">Countries</a>
                 </li>
                 <li class="menu-list-item active">
                     <a class="main-page-navbar-a" asp-controller="Cinema" asp-action="All">Cinemas</a>
