Added the functionality of adding a cinema when creating a movie.

--- a/MovieGalleryApp.Web/Views/Movie/Add.cshtml
+++ b/MovieGalleryApp.Web/Views/Movie/Add.cshtml
@@ -50,6 +50,11 @@
                     <input asp-for="Countries" class="form-control edit-width" aria-required="true" />
                     <span asp-validation-for="Countries" class="text-danger"></span>
                 </div>
+                <div class="input-container ic2">
+                    <label asp-for="Cinemas" class="form-label edit-position"></label>
+                    <input asp-for="Cinemas" class="form-control edit-width" aria-required="true" />
+                    <span asp-validation-for="Cinemas" class="text-danger"></span>
+                </div>
                 <button id="login-submit" type="submit" class="edit-submit">Submit</button>
             </form>
         </div>
